feat: 학습 데이터 등록 구현 완료
