# backend/src/features/parking/model/request/deleteFile.go
@@ -1,0 +1,5 @@
+package request
+
+type ReqDeleteFile struct {
+	DeleteName string `json:"deleteName" validate:"required"`
+}
