# backend/src/features/parking/model/response/deleteFile.go
@@ -1,0 +1,6 @@
+package response
+
+type ResDeleteFile struct {
+	Success bool   `json:"success"`
+	Message string `json:"message"`
+}
